<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="service_rating">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="okay_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="calculated_tip_amount">Tip Amount: %s</string>
</resources>